# MIDEM

./: .gitignore  README.md
midem_apps/midem_user_interaction/: CMakeLists.txt  package.xml  plugins.xml
midem_apps/midem_user_interaction/cfg/: dynamic_config.cfg
midem_apps/midem_user_interaction/cfg/cpp/midem_user_interaction/: MidemUserInteractionConfig.h
midem_apps/midem_user_interaction/config/: gesture_detector.yaml
midem_apps/midem_user_interaction/docs/: MidemUserInteractionConfig-usage.dox  MidemUserInteractionConfig.dox  MidemUserInteractionConfig.wikidoc
midem_apps/midem_user_interaction/include/gesture_detector/: elbow_flapping_skeleton_gesture_detector.h  gesture_detector.h  gesture_detector_defines.h  gesture_detector_utils.h  hand_gesture_detector.h  rubber_band_hand_gesture_detector.h  rubber_band_skeleton_gesture_detector.h  skeleton_gesture_detector.h
midem_apps/midem_user_interaction/include/midem_user_interaction/: midem_user_interaction.h
midem_apps/midem_user_interaction/launch/: user_interaction.launch  user_interaction_intel.launch
midem_apps/midem_user_interaction/src/: main.cpp  midem_user_interaction.cpp  user_interaction.ui
midem_apps/midem_user_interaction/src/gesture_detector/: elbow_flapping_skeleton_gesture_detector.cpp  gesture_detector_utils.cpp  rubber_band_hand_gesture_detector.cpp  rubber_band_skeleton_gesture_detector.cpp
midem_apps/midem_user_interaction/src/midem_user_interaction/cfg/: MidemUserInteractionConfig.py
midem_common/: CMakeLists.txt  package.xml
midem_common/config/: midem_ros_control.yaml
midem_common/launch/: bringup.launch  bringup_real.launch  components.launch  kinect_frames.launch  kinect_only.launch  midem.rviz  midem_bringup.launch  midem_fake.launch  midem_sensors.launch  midem_user_tracker.launch  sensors.launch  transform.launch  transform_intel.launch  user_tracker.launch
midem_description/: CMakeLists.txt  package.xml
midem_description/launch/: display.launch  midem.rviz
midem_description/urdf/: midem.urdf  midem.xacro  midem_dual.urdf  midem_dual.xacro  midem_hexeo.xacro  midem_trio.xacro  midem_with_solder_lead.xacro
midem_moveit/: CMakeLists.txt  package.xml
midem_moveit/include/midem_moveit/: midem_moveit.h
midem_moveit/src/: midem_moveit.cpp
midem_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
midem_moveit_config/config/: controllers.yaml  kinematics.yaml  midem.srdf  ompl_planning.yaml  sensors_rgbd.yaml
midem_moveit_config/launch/: default_warehouse_db.launch  demo.launch  midem_moveit_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
midem_with_solder_lead_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
midem_with_solder_lead_moveit_config/config/: kinematics.yaml  midem_with_solder_lead.srdf  ompl_planning.yaml
midem_with_solder_lead_moveit_config/launch/: default_warehouse_db.launch  demo.launch  midem_with_solder_lead_moveit_controller_manager.launch  midem_with_solder_lead_moveit_planning_execution.launch  midem_with_solder_lead_moveit_sensor_manager.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
