<?xml version="1.0"?>
<package>
  <name>midem_moveit</name>
  <version>1.0.0</version>
  <description>The MIDEM moveit package</description>

  <maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>
  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>

</package>